DeveloperOrg/force-app/main/default/objects/Contact/fields/Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth__c</fullName>
    <label>Date of birth</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>year_of_Birth__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>