DeveloperOrg/force-app/main/default/objects/Contact/fields/year_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>year_of_Birth__c</fullName>
    <label>year of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2003</fullName>
            </value>
            <value>
                <fullName>2002</fullName>
            </value>
            <value>
                <fullName>2001</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>