DeveloperOrg/force-app/main/default/objects/Contact/validationRules/contact_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>contact_phone</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(  Phone , &quot;\\d{10}&quot;))</errorConditionFormula>
    <errorMessage>📢 Please enter a 10-digit phone number without spaces or dashes.</errorMessage>
</ValidationRule>