DeveloperOrg/force-app/main/default/objects/Contact/validationRules/Require_EmailSombol.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_EmailSombol</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(Email, &quot;@&quot;))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Require_Email@Sombol</errorMessage>
</ValidationRule>